# At-Framework

./: CMakeLists.txt  README.md  main.c  main.h
include/: at_command.h  at_command_config.h  example.h  module_interface.h  platform.h  queue.h  string_utils.h
module/e36/: e36_module.c  e36_module.h
module/ec800m/: ec800m_module.c  ec800m_module.h
src/: at_command.c  at_command_config.c  example.c  module_interface.c  platform.c  queue.c  string_utils.c
